# $Id$

	0.8-0 (12.07.2007)

	upgrade to 7/7 version of MVTDST (includes better support for
        dimensions > 100). Thanks to Karen Conneely <conneely@umich.edu>
        for motivating the update and for checking the new version.

	0.7-5 (15.09.2006)

        fix problem reported by valgrind

	0.7-4 (08.09.2006)

        add long requested `dmvt'
        call RNG functions only one time
        make sure unifrnd is double precision

	0.7-3 (23.08.2006)

        make sure pmvnorm(lo=c(-Inf,-Inf), up=c(Inf,Inf), mean=c(0,0) == 0

	0.7-2 (29.08.2005)

        make gfortran happy (a warning about unused variable NF remains)

	0.7-1 (18.11.2004)

	use #!/bin/sh 

	0.7-0 (14.10.2004)

	a coding session with Frank produced `qmv{t,norm}'.
        try to check if the support specified by `lower' and `upper' is
        empty (problem spotted by Peter Thomson <peter@statsresearch.co.nz>)
	Alan's fix prevents negative values to be returned.

	some cosmetics

	0.6-8 (03.06.2004)

	EXIT statements are not supported by `f2c', Alan added GOTO
        statements to `MVCHNC' 

	0.6-7 (27.05.2004)

	Alan's fix to MVCHNC solves problems with large degree of freedom

	0.6-6 (22.01.2004)

	`La.eigen' is deprecated and `eigen' replaces it in R-1.9.0

	0.6-5 (14.11.2003)

	check if covariance matrix is pd in rmvnorm (by Fritz Leisch)

	0.6-4 (06.10.2003)

	use new base function `cov2cor'

	0.6-3 (21.07.2003)

	Alans changes were restricted to N <= 100, now N <= 1000
        are possible again

	0.6-2 (25.06.2003)

	Alan's recent changes to `mvt.f' make `g77 -pedantic -Wall'
	happy

	0.6-1 (18.06.2003)

	pmvt(..., df = 0, ...) will return normal probabilities for both
        the univariate and multvariate problem

	0.6-0 (17.06.2003)

	Fortran code in `mvt.f' updated to recent version by Alan and Frank.
        This fixes problems with `pmvt' and large degrees of freedom.

	0.5-15 (16.06.2003)

	a note on one-sided probabilities in `pmvt'